crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mornewclitics.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Courtney",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Tracy",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Rose",
            "role": "Investigator",
            "speaker_code": "INV"
          },
          {
            "name": "Tom",
            "role": "Father",
            "speaker_code": "FAT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;06.18",
        "corpus": "belfast",
        "language": "eng",
        "role": "Target_Child",
        "ses": "UC",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Father",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "08-SEP-1992",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Test ~ clitics; not actually correct language here, manually put",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "Ethan",
                  "pos": "propn"
                },
                "post_clitics": [
                  {
                    "features": [
                      "Fin",
                      "Ind",
                      "Pres",
                      "S3"
                    ],
                    "lemma": "be",
                    "pos": "aux"
                  }
                ]
              },
              {
                "main": {
                  "features": [
                    "S1"
                  ],
                  "lemma": "fast",
                  "pos": "adj"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf"
                  ],
                  "lemma": "dar",
                  "pos": "verb"
                },
                "post_clitics": [
                  {
                    "features": [
                      "Dat"
                    ],
                    "lemma": "yo",
                    "pos": "pron"
                  },
                  {
                    "features": [
                      "Acc"
                    ],
                    "lemma": "lo",
                    "pos": "pron"
                  }
                ]
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 5,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 5,
                "index": 2,
                "relation": "COP"
              },
              {
                "head": 5,
                "index": 3,
                "relation": "AMOD"
              },
              {
                "head": 5,
                "index": 4,
                "relation": "IOBJ"
              },
              {
                "head": 0,
                "index": 5,
                "relation": "ROOT"
              },
              {
                "head": 5,
                "index": 6,
                "relation": "OBJ"
              },
              {
                "head": 5,
                "index": 7,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "Ethan's",
                  "type": "text"
                }
              ],
              "raw_text": "Ethan's",
              "span": {
                "end": 403,
                "start": 396
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "fast",
                  "type": "text"
                }
              ],
              "raw_text": "fast",
              "span": {
                "end": 408,
                "start": 404
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "da",
                  "type": "text"
                },
                {
                  "content": "~",
                  "type": "text"
                },
                {
                  "content": "me",
                  "type": "text"
                },
                {
                  "content": "~",
                  "type": "text"
                },
                {
                  "content": "lo",
                  "type": "text"
                }
              ],
              "raw_text": "da~me~lo",
              "span": {
                "end": 417,
                "start": 409
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "INV"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": "08-SEP-1992",
      "code": "CHI",
      "id": {
        "age": "3;06.18",
        "corpus": "belfast",
        "language": "eng",
        "role": "Target_Child",
        "ses": "UC",
        "speaker": "CHI"
      },
      "name": "Courtney",
      "role": "Target_Child"
    },
    "FAT": {
      "birth_date": null,
      "code": "FAT",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Father",
        "speaker": "FAT"
      },
      "name": "Tom",
      "role": "Father"
    },
    "INV": {
      "birth_date": null,
      "code": "INV",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV"
      },
      "name": "Rose",
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Tracy",
      "role": "Mother"
    }
  }
}
